app/css/app.css
/* ... */
.messenger {
    display: none;
    padding: 10px;
    font-size: 14px;
    cursor: pointer;
    position: absolute;
    bottom: 75px;
    z-index: 10;
    right: 20px;
    border-radius: 3px;
    box-shadow: 1px 1px 5px #000;
}

.login .messenger {
    display: none;
    padding: 10px;
    font-size: 14px;
    cursor: pointer;
    position: relative;
    top: 0;
    right: inherit;
    margin: 0 auto;
    z-index: 10;
    border-radius: 3px;
    box-shadow: 1px 1px 5px #000;
}

.login .messenger i {
    font-size: 14px;
}

.messenger.info {
    background: #0480BE;

}

.messenger.edit {
    background: goldenrod;
}

.messenger.warn {
    background: #b94a48;
}

.messenger.ok {
    background: #468847;
}

.messenger span code {
    font: 700 1em cursive;
}

.messenger a {
    padding: 0px 3px;
    border-radius: 2px;
    background: #FFF;
    box-shadow: 1px 1px 1px #555;
    color: #555;
    text-decoration: none;
    text-transform: uppercase;
    text-shadow: none;
    font-weight: 100;
    font-size: 12px;
}

.messenger a:hover {
    box-shadow: none;
}

aside header input {
    position: absolute;
    top: 10px;
    right: 5px;
    padding: 5px 10px;
    width: 50%;
    height: 33px;
    border-radius: 21px;
}

#empty {
    font-size: 30px
}

.the-comments span {
    height: 50%;
    margin: 10px 0;
    padding: 0px 10px;
    display: block;
}

.the-comments a.post-comment {
    background: #555;
    color: #FFF;
    padding: 3px 10px;
    border-radius: 3px;
}

.the-comments span a {
    text-decoration: underline;
}

.the-comments .comment-text-holder,
.the-comments .comment-holder {
    position: relative;
}

.the-comments textarea {
    width: 100%;
    background: rgba(0, 0, 0, 0);
    border: none;
    padding: 20px 0;
    height: 100px;
}

.the-comments .preview,
.the-comments .trash,
.the-comments .edit {
    position: absolute;
    top: 0;
    right: 0;
    color: #FFF;
    padding: 5px 10px;
    text-decoration: none;
}

.the-comments .preview {
    background: cornflowerblue;
    border-radius: 0px 0px 0px 5px;
}

.the-comments .trash {
    background: tomato;
    border-radius: 0px 0px 0px 5px;
}

div.blockquote {
    margin-left: 0;
    text-indent: 10px;
}

div.blockquote p {
    padding: 0 10px;
    text-indent: 0;
    line-height: 21px;
}

div.main .the-comments .comment_gravatar {
    width: 34px;
    border-radius: 3px;
    vertical-align: middle;
}

/** login form **/
.login-form {
    margin: auto;
    width: 454px;
    -webkit-border-radius: 16px;
    border-radius: 16px;
    background: transparent;
    text-align: center;
    position: relative;
    color: #555;
}

.login p {
    font-size: 16px;
}

.login-form .spiner {
    margin: 10px auto
}

.login-form header {
    padding: 20px 0px 10px;
    text-align: center;
}

.login-form i {
    font-size: 49px;
}

.login-form i.icon-arrow-left, .login-form a {
    font-size: 16px;
}

.login-form h1 {
}

.login-form input[type="text"],
.login-form input[type="password"] {
    display: block;
    margin: 10px auto;
    padding: 10px;
    width: 300px;
    border: 1px solid #555;
    border-radius: 5px;
    box-shadow: 0px 0px 10px #bbb inset;
}

.login-form input[type="submit"],
.login-form button,
a.login-form-btn {
    display: block;
    margin: 21px 0 0 64px;
    margin: 0 auto;
    padding: 10px 20px;
    width: 310px;
    width: 300px;
    border: 1px solid #000000;
    border-radius: 5px;
    background: -webkit-gradient(linear, left top, left bottom, from(#6b6b6b), to(#000000));
    box-shadow: 0px 1px 3px rgba(000, 000, 000, 0.5), inset 0px 0px 1px rgba(255, 255, 255, 0.7);
    color: #ffffff;
    text-transform: uppercase;
    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.9), 0px 1px 0px rgba(255, 255, 255, 1);
}

.the-gist-name > b {
    position: relative;
    top: 3px;
    left: 6px;
    float: left;
}

.the-gist-name > i {
    position: relative;
    top: 4px;
    float: left;
}

.the-gist-name {
    overflow: auto;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none;
}

.tags {
    padding: 20px 0 0 20px;
    font-size: 14px;
}

aside ul li a {
    -webkit-user-select: none;
    font-size: 12px;
}

aside ul li a > h3 {
    margin: 0px 0px 5px 0px;
    padding: 0px 0px 0px 0px;
    font-size: 20px;
}

aside ul li a span {
    margin: 0px -5px 0px 0px;
    padding: 0px 4px;
    text-shadow: none;
}

aside ul li a:hover span.pills {
    text-shadow: none;
}

aside ul li a span.secret,
aside ul li a span.public {
    border-radius: 3px;
    text-transform: uppercase;
}

aside ul li, aside ul li a {
    -webkit-transition: none;
    transition: none;
}

aside ul li a p {
    margin: 10px 0px 0;
}

aside ul li a p span {
    margin: 0px 4px 0px 0px;
    border: none;
    background: transparent;
}

.gist-comment {
    margin: 0;
    padding: 0px 4px;
    border-right: none;
    border-radius: 3px;
    font-size: 12px;
}

section input[type="text"] {
    display: block;
    margin: 10px 0;
    padding: 10px;
    width: 300px;
    border-radius: 5px;
}

section input[type="text"].desc {
    width: 100%;
}

section h1 {
    text-transform: uppercase;
    font-weight: 300;
}

header input.edaitable {
    margin: 0;
    padding: 5px;
    width: 100%;
    border-radius: 3px;
}

.the-gist-name input.edaitable {
    position: absolute;
    top: 6px;
    left: 6px;
    margin: 0;
    padding: 5px;
    width: 200px;
    border-radius: 3px;
}

.the-gist-name span {
    line-height: 22px;
}

.dragarea {
    opacity: 0.3;
}

.blockquote code {
    padding: 1px 3px;
    border-radius: 2px;
    font-family: monospace;
}

.main {
    position: relative;
    z-index: 1;
}

.updateAvailable {
    border: 1px solid green;
    background: lightgreen;
    padding: 9px;
    display: block;
    font-size: 16px;
    color: green;
    border-radius: 3px;
}

ul.logos {
    list-style: none;
    margin: 4% 0;
}
/* ... */

